gcc/testsuite/rust/rustc/ui/derives/deriving-meta-unknown-trait.rs
#[derive(Eqr)]
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
struct Foo;

pub fn main() {}

